# my-humble-scraper

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_scraper.py
web_scraper/: database.py  main.py  scheduler.py  scraper.py  utils.py
