[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = "A scalable web scraper project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
aiohttp = "^3.10.10"
aiodns = "^3.2.0"
cchardet = "^2.1.7"
apscheduler = "^3.10.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape = "web_scraper.main:main"